Use java 25 almost everywhere to remove no longer used workaround
Before java 11 was used for most examples, but for maven to run also java 17 was used.